# 26NLP-project

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
configs/: data_fineweb_edu_optional.json  data_tinystories.json  model_100m.json  model_30m.json  model_60m.json  model_smoke.json  train_30m_tinystories.json  train_60m_short.json  train_tiny.json
data/: sample_train.txt  sample_valid.txt
reports/: experiment_notes.md  final_report.md  presentation.md  report_outline.md  task_book.md  tinyllama_fa2_batch_invariance.pptx
reports/references/: batch_invariance_in_llm_inference.md
results/: README.md
results/main_experiments_30m_v2/: environment.json
results/train_30m/: resolved_config.json  training_metrics.csv  training_summary.json
scripts/: generate.sh  prepare_data.sh  run_attention_benchmark.sh  run_batch_sensitivity.sh  run_main_experiments.sh  run_toy_experiments.sh  setup_conda.sh  train_main.sh  train_tiny.sh
src/: __init__.py  common.py
src/analysis/: __init__.py  plot_results.py
src/bench/: __init__.py  attention_benchmark.py  environment_report.py  matmul_benchmark.py  model_scale.py  rmsnorm_benchmark.py
src/data/: __init__.py  dataset.py  prepare_corpus.py  tokenizer.py
src/determinism/: __init__.py  batch_sensitivity.py  divergence_search.py  improved_model_validation.py
src/eval/: __init__.py  perplexity.py
src/infer/: __init__.py  generate.py  (+1 more)
tests/: test_attention_benchmark.py  test_data.py  test_divergence_search.py  test_improved_model_validation.py  test_model.py  test_reductions.py  test_tokenizer.py
(+37 files in other folders)
