[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyllama-batch-invariance"
version = "0.1.0"
description = "Small decoder-only LM pretraining and deterministic inference experiments"
requires-python = ">=3.10,<3.13"
dependencies = [
  "datasets>=3.0",
  "matplotlib>=3.9",
  "numpy>=1.26",
  "sentencepiece>=0.2",
  "torch>=2.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
